<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/detailActivityToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#fff"
        android:elevation="2dp"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        tools:ignore="RtlHardcoded"
        tools:targetApi="lollipop">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/back" />

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:text="About us"
            android:textColor="#000"
            android:textSize="18sp" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/detailActivityToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_200sdp"
                android:layout_gravity="center"
                android:src="@drawable/logo" />

            <TextView
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="@dimen/_280sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/blog_desc"
                android:textAlignment="center" />

            <Button
                android:id="@+id/website"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/follow_us_button"
                android:drawableLeft="@drawable/web"
                android:padding="10dp"
                android:text="@string/visit_site"
                android:textAllCaps="false"
                android:onClick="openWebsite"/>

            <TextView
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:text="@string/follow" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/twitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/follow_us_button"
                    android:drawableLeft="@drawable/twitter"
                    android:padding="10dp"
                    android:text="@string/twitter"
                    android:textAllCaps="false"
                    android:onClick="openTwitter"/>

                <Button
                    android:id="@+id/github"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/follow_us_button"
                    android:drawableLeft="@drawable/github"
                    android:padding="10dp"
                    android:text="@string/github"
                    android:textAllCaps="false"
                    android:onClick="openGithub"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/instagram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/follow_us_button"
                    android:drawableLeft="@drawable/instagram"
                    android:onClick="openInstagram"
                    android:padding="10dp"
                    android:text="@string/instagram"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/follow_us_button"
                    android:drawableLeft="@drawable/facebook"
                    android:onClick="openFacebook"
                    android:padding="10dp"
                    android:text="@string/facebook"
                    android:textAllCaps="false" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>